; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/brcmnand/extr_brcmnand.c_brcmnand_rmw_reg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/brcmnand/extr_brcmnand.c_brcmnand_rmw_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcmnand_controller = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.brcmnand_controller*, i32, i32, i32, i32)* @brcmnand_rmw_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @brcmnand_rmw_reg(%struct.brcmnand_controller* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.brcmnand_controller*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.brcmnand_controller* %0, %struct.brcmnand_controller** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load %struct.brcmnand_controller*, %struct.brcmnand_controller** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @brcmnand_read_reg(%struct.brcmnand_controller* %12, i32 %13)
  store i32 %14, i32* %11, align 4
  %15 = load i32, i32* %8, align 4
  %16 = xor i32 %15, -1
  %17 = load i32, i32* %11, align 4
  %18 = and i32 %17, %16
  store i32 %18, i32* %11, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* %9, align 4
  %21 = shl i32 %19, %20
  %22 = load i32, i32* %11, align 4
  %23 = or i32 %22, %21
  store i32 %23, i32* %11, align 4
  %24 = load %struct.brcmnand_controller*, %struct.brcmnand_controller** %6, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %11, align 4
  %27 = call i32 @brcmnand_write_reg(%struct.brcmnand_controller* %24, i32 %25, i32 %26)
  ret void
}

declare dso_local i32 @brcmnand_read_reg(%struct.brcmnand_controller*, i32) #1

declare dso_local i32 @brcmnand_write_reg(%struct.brcmnand_controller*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
